# Simple-printer

./: .gitignore  CMakeLists.txt  README.md  build.bat  config.ini  installer.iss  run.bat  runPrint.bat
Data/settings/cache/: opencl_profile.xml
Data/settings/crash/: dump.ini
Data/settings/user/: registrymodifications.xcu
Data/settings/user/extensions/bundled/: extensions.pmap
Data/settings/user/extensions/bundled/registry/com.sun.star.comp.deployment.configuration.PackageRegistryBackend/: backenddb.xml  configmgr.ini
Data/settings/user/pack/: registrymodifications.pack
docs/: _temp-prompt.txt  config-rule.txt  context-prompt.txt  folder-tree.txt  home-window-layout.html  home-window-layout.txt  temp.txt  tempppp.txt  temppppp.txt
include/app/: App.h  CommandLine.h
include/config/: ConfigModel.h  ConfigParser.h  ConfigWriter.h
include/controller/: HomeController.h  PrintController.h
include/controller/home/: AdvangeConfigSection.h  BasicConfigSection.h  ControlBlock.h  FileListView.h  InfoConfigSection.h  MarginConfigSection.h
include/controller/print/: Counter.h  Printer.h  Renderer.h
include/counter/: Counter.h  DocxWorker.h  PdfCounter.h  PdfWorker.h
include/platform/: FilePicker.h  WinPrinter.h  WinUtils.h
include/printer/: Printer.h  WinPrinter.h  WinSpooler.h
include/renderer/: DocxWorker.h  ImageWorker.h  PdfWorker.h  Renderer.h
include/ui/: BaseWindow.h  HomeWindow.h  PrintWindow.h  PrintingWindow.h
include/ui/components/: BasicConfigSection.h  ControlBlock.h  FileListView copy.txt  HomeComponentMap.h  MarginConfigSection.h
include/ui/home/: AdvanceConfigSection.h  BasicConfigSection.h  FileListView.h  HomeComponentMap.h  InfoConfigSection.h  MarginConfigSection.h
launcher/: launcher.cpp
resource/: resource.rc
src/: main.cpp
src/app/: App.cpp  CommandLine.cpp
src/config/: ConfigParser.cpp  ConfigWriter.cpp
src/controller/: HomeController.cpp  PrintController.cpp
src/controller/home/: AdvangeConfigSection.cpp  BasicConfigSection.cpp  ControlBlock.cpp  FileListView.cpp  InfoConfigSection.cpp  MarginConfigSection.cpp
src/controller/print/: Counter.cpp  Printer.cpp  Renderer.cpp
src/counter/: Counter.cpp  DocxWorker.cpp  PdfCounter.cpp  PdfWorker.cpp
src/platform/: FilePicker.cpp  WinPrinter.cpp  WinUtils.cpp
src/printer/: Printer.cpp  WinPrinter.cpp  WinSpooler.cpp
src/renderer/: DocxWorker.cpp  ImageWorker.cpp  PdfWorker.cpp  Renderer.cpp
src/ui/: BaseWindow.cpp  HomeWindow.cpp  PrintWindow.cpp  PrintingWindow.cpp
src/ui/components/: AdvanceConfigSection.cpp  BasicConfigSection.cpp  ControlBlock.cpp  FileListView copy.cpp.txt  MarginConfigSection.cpp
src/ui/home/: AdvanceConfigSection.cpp  BasicConfigSection.cpp  ControlBlock.cpp  FileListView.cpp  InfoConfigSection.cpp  MarginConfigSection.cpp
test/: test.docx
